működő alap wpf

--- a/GCWG06_HFT_2021222.WpfClient/MainWindow.xaml
+++ b/GCWG06_HFT_2021222.WpfClient/MainWindow.xaml
@@ -14,12 +14,31 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding Employees}">
+        <ListBox ItemsSource="{Binding Employees}" SelectedItem="{Binding SelectedEmployee}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Label Content="{Binding Name}"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <StackPanel Grid.Column="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Name: " Padding="10"/>
+                <TextBox Grid.Column="1" Text="{Binding SelectedEmployee.Name}" Padding="10"/>
+                <Label Grid.Row="1" Content="Salary" Padding="10"/>
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SelectedEmployee.Salary}" Padding="10"/>
+            </Grid>
+            <Button Content="Create Employee" Command="{Binding CreateEmployeeCommand}" Padding="10" Margin="10"/>
+            <Button Content="Delete Employee" Command="{Binding DeleteEmployeeCommand}" Padding="10" Margin="10"/>
+            <Button Content="Update Employee" Command="{Binding UpdateEmployeeCommand}" Padding="10" Margin="10"/>
+        </StackPanel>
     </Grid>
 </Window>
