--- a/GCWG06_HFT_20212.JSClient/wwwroot/style.css
+++ b/GCWG06_HFT_20212.JSClient/wwwroot/style.css
@@ -1,2 +1,36 @@
-﻿body {
+﻿table{
+    width: 100%;
+}
+
+table, th, td{
+    border: 1px solid black;
+}
+
+table{
+    border-collapse: collapse;
+}
+th, td{
+    padding: 5px;
+}
+th{
+    background-color: lightblue;
+}
+
+#formdiv{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+#formdiv label, input{
+    margin: 10px;
+    padding: 7px;
+}
+
+#formdiv label{
+    font-weight: bolder;
+}
+
+table button{
+    padding: 2px;
 }
